[gd_scene load_steps=15 format=3 uid="uid://ct67ce3b7ju7h"]

[ext_resource type="Script" path="res://game_screen.gd" id="1_ptail"]
[ext_resource type="Script" path="res://ColorRect2.gd" id="1_xo8w3"]
[ext_resource type="Script" path="res://promptHolder.gd" id="3_pqi2l"]
[ext_resource type="Script" path="res://logHolder.gd" id="4_rkpd6"]
[ext_resource type="Texture2D" uid="uid://dbqcmu4pvidsn" path="res://broken_glass_png_20_by_agusrockforlife_ddyqyd9-fullview.png" id="4_ty72h"]
[ext_resource type="Script" path="res://main_menu_button.gd" id="5_3geyg"]
[ext_resource type="Script" path="res://scoreHolder.gd" id="5_x8tsp"]
[ext_resource type="Script" path="res://try_again_button.gd" id="6_xmvij"]
[ext_resource type="Script" path="res://AnimatedSprite2D.gd" id="8_3so1y"]
[ext_resource type="Texture2D" uid="uid://b8qx6uw11c3w6" path="res://TV(1).png" id="9_lexgh"]
[ext_resource type="Texture2D" uid="uid://dqjoegu3st8ir" path="res://TV(2).png" id="10_v0qwo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfsq0"]
bg_color = Color(0.336748, 0.322636, 0.31323, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r3hy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pnbvr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_lexgh")
}, {
"duration": 1.0,
"texture": ExtResource("10_v0qwo")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="gameScreen" type="Node2D"]
script = ExtResource("1_ptail")

[node name="borderColor" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 679.0
scale = Vector2(1, 0.96)
color = Color(0.124907, 0.1216, 0.32, 1)
script = ExtResource("1_xo8w3")
metadata/_edit_use_anchors_ = true

[node name="mainColor" type="ColorRect" parent="."]
offset_left = 8.0
offset_top = 5.0
offset_right = 1141.0
offset_bottom = 670.0
scale = Vector2(1, 0.96)
color = Color(1, 0.0941176, 0.211765, 1)

[node name="promptHolder" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 24.0
offset_top = 195.0
offset_right = 699.0
offset_bottom = 235.0
theme_override_font_sizes/normal_font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_bfsq0")
text = "hola como estas"
scroll_active = false
script = ExtResource("3_pqi2l")

[node name="logHolder" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 713.0
offset_top = 195.0
offset_right = 1123.0
offset_bottom = 532.0
theme_override_font_sizes/normal_font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_bfsq0")
scroll_active = false
script = ExtResource("4_rkpd6")

[node name="scoreHolder" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 25.0
offset_top = 251.0
offset_right = 359.0
offset_bottom = 296.0
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_bfsq0")
text = "SCORE"
scroll_active = false
script = ExtResource("5_x8tsp")

[node name="timerDisplay" type="RichTextLabel" parent="."]
offset_left = 370.0
offset_top = 249.0
offset_right = 697.0
offset_bottom = 400.0
theme_override_font_sizes/normal_font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_4r3hy")
scroll_active = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(111, 106)
scale = Vector2(0.738281, 0.738281)
sprite_frames = SubResource("SpriteFrames_pnbvr")
autoplay = "default"
frame_progress = 0.870421
script = ExtResource("8_3so1y")

[node name="broken_glass" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(549, 306)
scale = Vector2(1.55, 1.55)
texture = ExtResource("4_ty72h")

[node name="game_over_overlay" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 661.0
color = Color(0.109804, 0, 0.282353, 0)

[node name="gameOverText" type="RichTextLabel" parent="."]
offset_left = 155.0
offset_right = 1255.0
offset_bottom = 179.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_font_sizes/normal_font_size = 132
text = "GAME OVER"
scroll_active = false

[node name="game_over_state_Stuff" type="Node2D" parent="."]
position = Vector2(0, 1000)

[node name="main_menu_button" type="Button" parent="game_over_state_Stuff"]
offset_left = 67.0
offset_top = 327.0
offset_right = 485.0
offset_bottom = 589.0
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 60
text = "MAIN MENU"
script = ExtResource("5_3geyg")

[node name="try_again_button" type="Button" parent="game_over_state_Stuff"]
offset_left = 630.285
offset_top = 327.0
offset_right = 1048.28
offset_bottom = 589.0
theme_override_font_sizes/font_size = 60
text = "TRY AGAIN"
script = ExtResource("6_xmvij")

[node name="transition_block" type="ColorRect" parent="."]
visible = false
offset_right = 1164.0
offset_bottom = 682.0
color = Color(0, 0, 0, 1)
